# peanuts

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
include/: rpmbb.hpp
include/rpmbb/: bb.hpp  cpu_affinity_manager.hpp  extent_list.hpp  extent_tree.hpp  inspector.hpp  mpi.hpp  options.hpp  pmem2.hpp  ring_buffer.hpp  ring_tracker.hpp  rpm.hpp  runtime.hpp  sense_barrier.hpp  topology.hpp  tsc.hpp  util.hpp  utils.hpp  variant_encoding.hpp  varint_encoding.hpp  welford.hpp
include/rpmbb/inspector/: chrono.hpp  std.hpp  std_containers.hpp
include/rpmbb/mpi/: aint.hpp  comm.hpp  datatype.hpp  dtype.hpp  env.hpp  error.hpp  info.hpp  memory.hpp  raii.hpp  runtime.hpp  status.hpp  type.hpp  type_traits.hpp  win.hpp
include/rpmbb/mpi/detail/: container_adapter.hpp
include/rpmbb/raii/: pmem2.hpp
include/rpmbb/util/: cond_deleter.hpp  enumerate.hpp  gen_random_string.hpp  human_readable.hpp  power.hpp  sense_barrier.hpp  singleton.hpp  stopwatch.hpp  welford.hpp
include/rpmbb/utils/: cond_deleter.hpp  cpu_affinity_manager.hpp  env.hpp  gen_random_string.hpp  human_readable.hpp  power.hpp  sense_barrier.hpp  singleton.hpp  stopwatch.hpp  tls.hpp  tsc.hpp
projects/peanuts/: CMakeLists.txt  config.hpp.in
projects/peanuts/include/: peanuts.hpp
projects/peanuts/include/peanuts/: bb.hpp  deferred_file.hpp  extent_list.hpp  extent_tree.hpp  inspector.hpp  mpi.hpp  options.hpp  pmem2.hpp  ring_buffer.hpp  ring_tracker.hpp  rpm.hpp  runtime.hpp  sparse_extent.hpp  sparse_extent_tree.hpp  topology.hpp  utils.hpp
projects/peanuts/include/peanuts/inspector/: mpi.hpp  std_chrono.hpp  std_containers.hpp
projects/peanuts/include/peanuts/mpi/: aint.hpp  comm.hpp  dtype.hpp  error.hpp  group.hpp  info.hpp  memory.hpp  raii.hpp  request.hpp  runtime.hpp  status.hpp  type.hpp  type_traits.hpp  utils.hpp  win.hpp
projects/peanuts/include/peanuts/mpi/detail/: container_adapter.hpp
projects/peanuts/include/peanuts/raii/: fd.hpp  pmem2.hpp
projects/peanuts/include/peanuts/utils/: cond_deleter.hpp  cpu_affinity_manager.hpp  delta_encoding.hpp  enumerate.hpp  env.hpp  fs.hpp  gen_random_string.hpp  human_readable.hpp  power.hpp  sense_barrier.hpp  singleton.hpp  stopwatch.hpp  system.hpp  tls.hpp  tsc.hpp  varint_encoding.hpp  welford.hpp
projects/peanuts/src/benchmarks/: CMakeLists.txt  extent_tree_bench.cpp  io_uring_bench.cpp  ior_mimic_bench.cpp  rpmem_bench.cpp
projects/peanuts/tests/: bb_store_mpitest.cpp  cond_deleter_test.cpp  deferred_file_test.cpp  encoding_test.cpp  enumerate_test.cpp  extent_list_test.cpp  extent_tree_test.cpp  human_readable_test.cpp  inspector_std_test.cpp  inspector_test.cpp  mpi_mpitest.cpp  options_test.cpp  random_string_generator_test.cpp  ring_buffer_mpitest.cpp  ring_tracker_test.cpp  rpm_mpitest.cpp  runtime_mpitest.cpp  sense_barrier_test.cpp  singleton_test.cpp  sparse_extent_tree_test.cpp  stopwatch_test.cpp  topology_mpitest.cpp  tsc_test.cpp  welford_test.cpp
projects/peanuts_c/: CMakeLists.txt  peanuts_c.pc.in
projects/peanuts_c/include/: peanuts_c.h
projects/peanuts_c/src/: peanuts_c.cpp
projects/peanuts_c/tests/: CMakeLists.txt  peanuts_c_mpitest.cpp
projects/rpmbb/: CMakeLists.txt  config.hpp.in  rpmbb.pc.in
projects/rpmbb/include/: rpmbb.hpp
projects/rpmbb/include/rpmbb/: bb.hpp  deferred_file.hpp  extent_tree.hpp  inspector.hpp  mpi.hpp  pmem2.hpp  ring_buffer.hpp  ring_tracker.hpp  rpm.hpp  sparse_extent.hpp  sparse_extent_tree.hpp
projects/rpmbb/include/rpmbb/inspector/: mpi.hpp  std_chrono.hpp
projects/rpmbb/include/rpmbb/mpi/: aint.hpp  comm.hpp  dtype.hpp  group.hpp  raii.hpp  request.hpp  status.hpp  utils.hpp
projects/rpmbb/include/rpmbb/raii/: fd.hpp
projects/rpmbb/include/rpmbb/utils/: delta_encoding.hpp  enumerate.hpp  fs.hpp  power.hpp  system.hpp  welford.hpp
projects/rpmbb/src/benchmarks/: ior_mimic_bench.cpp  rpmem_bench.cpp
projects/rpmbb/tests/: CMakeLists.txt  bb_store_mpitest.cpp  deferred_file_test.cpp  enumerate_test.cpp  extent_list_test.cpp  human_readable_test.cpp  mpi_mpitest.cpp  options_test.cpp  ring_buffer_mpitest.cpp  rpm_mpitest.cpp  sparse_extent_tree_test.cpp  stopwatch_test.cpp  topology_mpitest.cpp  tsc_test.cpp  welford_test.cpp
projects/rpmbb_c/: CMakeLists.txt  rpmbb_c.pc.in
projects/rpmbb_c/include/: rpmbb.h  rpmbb_c.h
projects/rpmbb_c/src/: rpmbb_c.cpp
projects/rpmbb_c/tests/: CMakeLists.txt  rpmbb_c_mpitest.cpp
scripts/: rpmem_bench.job.sh
spack/envs/dev/: spack.yaml
spack/envs/pegasus/: spack.yaml
spack/repos/peanuts/: repo.yaml
spack/repos/rpmbb/: repo.yaml
spack/repos/rpmembb/: repo.yaml
src/: CMakeLists.txt  main.cpp
src/benchmarks/: CMakeLists.txt  extent_tree_bench.cpp  io_uring_bench.cpp  ior_mimic_bench.cpp  rma_bench.cpp  rpmem_bench.cpp
tests/: CMakeLists.txt  bb_store_mpitest.cpp  cond_deleter_test.cpp  encoding_test.cpp  enumerate_test.cpp  example_mpitest.cpp  extent_list_test.cpp  extent_tree_test.cpp  human_readable_test.cpp  inspector_std_test.cpp  inspector_test.cpp  mpi_mpitest.cpp  random_string_generator_test.cpp  ring_buffer_mpitest.cpp  ring_tracker_test.cpp  rpm_mpitest.cpp  runtime_mpitest.cpp  sense_barrier_test.cpp  singleton_test.cpp  stopwatch_test.cpp  topology_mpitest.cpp  tsc_test.cpp  welford_test.cpp
